# RobotSnackServing

./: .gitattributes  .gitignore  MainWindow_app.py  MainWindow_ctrl.py  MainWindow_ui.py  MainWindow_ui.ui  README.md  action_worker.py  move_TCP.py  parameters.json  pyproject.toml  recipe_loader.py  ui_demo.html  web_bridge.py  web_panel.py
Camera/: camera.py
CheckEmptyCup/: cup_TCP.py
CheckWaffleLid/: Server.py  lid_TCP.py  protocol.md
GraspGen/: graspgen_comm.py  simple_receive_test.py  simple_send.py
GraspGen/common_utils/: socket_communication.py
PeanutNumberClassification/: PeanutNumClassification.py  ex_CallPeanutNumClassification.py  roi.json
PeanutNumberClassification/model/: yolo11n-cls_peanut_20251106.pt  yolo11s-cls_peanut_20251119.pt
ROS/: robot_state_collector.py  ros_comm.py  socket_communication.py  trajectory_loader.py  trajectory_parser.py  try_block.py  try_main.py
ROS/trajectories/: close_2nd_lid.csv  drop_1st_batter.csv  drop_2nd_batter.csv  drop_fork.csv  drop_spoon.csv  drop_waffle.csv  get_1st_waffle.csv  get_2nd_waffle.csv  get_2nd_waffle_top_lid.csv  get_spoon.csv  grab_1st_batter.csv  grab_fork.csv  pour_1st_batter.csv  pour_2nd_batter.csv  press_button.csv  press_button1 (副本).csv  press_button2 (副本).csv  press_button_2nd_part.csv  spoon_peanuts.csv
TCP/: TCP.py
Thermal/: thermal_TCP.py
Uart/: UART.py  Wok.py
cam_stream/: stream_ensenso_client.py  stream_yolo_client.py  try_stream.py  zed_utils.py
recipes/: peanut.json  redbean.json  waffle.json
