[tool.setuptools.packages.find]
include = []

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "robotsnackserving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyserial>=3.5",
    "pyside6>=6.10.1",
    "ultralytics>=8.3.243",
]
